--- a/css/bee_screen.css
+++ b/css/bee_screen.css
@@ -14,9 +14,24 @@ ul#demo-block {
       color: #eee;
       font-weight: bold; }
 
-#index-main h2 {
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
+#home-first {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%; }
+  #home-first h2 {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
+#home-second {
+  position: relative;
+  z-index: 2;
+  /* sets it above .slide1  */
+  margin-top: 100%;
+  /* this pushes it below .slide1 in the scroll */
+  width: 100%;
+  background: #6FCBD5; }
